migtrate more posts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ nav:
       - 06: 
         - Threat Get'ss a Vote - Applying a Threat Based Approach to Security Testing: blogs/2018/06/threat-gets-a-vote-applying-a-threat-based-approach-to-security-testing.md
       - 05:
-        - Threat Mitagation Stratigies - Part 2: blogs/2018/05/threat-mitigation-strategies-technical-recommendations-and-info-part-2.md
+        - Threat Mitagation Strategies - Part 2: blogs/2018/05/threat-mitigation-strategies-technical-recommendations-and-info-part-2.md
     - 2016:
       - 09:
         - New Information Security and Red Teaming Blog Threat Express by MINIS: blogs/2016/09/new-information-security-red-teaming-blog-threat-express-minis.md
