--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,9 +72,11 @@ nav:
       - 11:
         - A Deep Dive into Cobalt Strike Malleable C2: blogs/2018/11/a-deep-dive-into-cobalt-strike-malleable-c2.md
       - 06: 
-        - Threat Get'ss a Vote - Applying a Threat Based Approach to Security Testing: blogs/2018/06/threat-gets-a-vote-applying-a-threat-based-approach-to-security-testing.md
+        - Threat Get's a Vote - Applying a Threat Based Approach to Security Testing: blogs/2018/06/threat-gets-a-vote-applying-a-threat-based-approach-to-security-testing.md
       - 05:
         - Threat Mitagation Strategies - Part 2: blogs/2018/05/threat-mitigation-strategies-technical-recommendations-and-info-part-2.md
+      - 02:
+        - Automating Cobalt Strike Profiles Apache mod_rewrite htaccess Files for Intelligent C2 Redirection: blogs/2018/02/automating-cobalt-strike-profiles-apache-mod_rewrite-htaccess-files-intelligent-c2-redirection.md
     - 2016:
       - 09:
         - New Information Security and Red Teaming Blog Threat Express by MINIS: blogs/2016/09/new-information-security-red-teaming-blog-threat-express-minis.md
