--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ markdown_extensions:
 # Navigation
 nav:
   - Home: index.md
-  - Blogs:
+  - Blog Posts:
     - 2019:
       - Penetration Testing Pasties: blogs/2019/penetration-testing-pasties.md 
     - 2018:
@@ -84,5 +84,24 @@ nav:
       - Slack Notifications for Cobalt Strike: blogs/2016/slack-notifications-for-cobalt-strike.md
       - SubShell and TinyShell - Custom Covert Webshells: blogs/2016/web-shells-covert-channel.md
       - New Information Security and Red Teaming Blog Threat Express by MINIS: blogs/2016/new-information-security-red-teaming-blog-threat-express-minis.md
+  - Red Teaming: redteaming/redteaming.md
+  - Red Team Resources:
+    - General: redteaming/resources.md
+    - Attack Active Directory: redteaming/windowsactivedirectory.md
+    - Definitions: redteaming/definitions.md
+    - Roles and Relationships: redteaming/rolesandrelationships.md
+    - Red vs Pen vs Vuln: redteaming/red_vs_pen_vs_vuln.md
+    - Cheatsheets: redteaming/cheatsheets.md
+    - MITRE ATT&CK: redteaming/mitre_attack.md
+  - Red Team Planning:
+    - Goal Planing: redteaming/redteamplanning/goalplanning.md
+    - Red Team Checklist: redteaming/redteamplanning/redteamchecklist.md
+    - Tradecraft: redteaming/redteamplanning/tradecraft.md
+  - Red Team IOCs:
+    - TinyShell IOCs: redteaming/tool_ioc/tinyshell_ioc.md
+    - PSEXEC IOCs: redteaming/tool_ioc/psexec.md
+    - JPCert IOCs: https://jpcertcc.github.io/ToolAnalysisResultSheet/
+    - SANS Hunt Evil: https://digital-forensics.sans.org/media/SANS_Poster_2018_Hunt_Evil_FINAL.pdf
+  - Red Team Videos: redteaming/videos/videos.md
   - Archive: archive.md
   - Contributors: contributors.md
